<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_active_time_window"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/start_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_00_00"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/set_start_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_start_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="18sp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/end_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_23_59"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/set_end_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_end_time"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_time_settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_time_settings"
        android:layout_gravity="center"/>

</LinearLayout>